2017043001/test/cr.txt
f2.cpp: In function ‘void F2()’:
f2.cpp:19:18: error: ‘tem’ was not declared in this scope
   result = m*n / tem;//temp打错
                  ^


